--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typechain/hardhat": "^6.1.2",
     "chai": "^4.2.0",
     "dotenv": "^16.0.1",
+    "ethereum-waffle": "^3.2.0",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
